fixed zooming with double tap on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ button {
     color: white;
     font-size: 5rem;
     cursor: pointer;
+    touch-action: manipulation;
 }
 .container1, .container2 {
     display: flex;
